Clean up metadata module