@@ -85,7 +85,7 @@ public class ConfigurationControlManager {
         private Consumer<ConfigResource> existenceChecker = __ -> { };
         private Optional<AlterConfigPolicy> alterConfigPolicy = Optional.empty();
         private ConfigurationValidator validator = ConfigurationValidator.NO_OP;
-        private Map<String, Object> staticConfig = Collections.emptyMap();
+        private Map<String, Object> staticConfig = Map.of();
         private int nodeId = 0;
         private FeatureControlManager featureControl = null;
 
@@ -217,7 +217,7 @@ public class ConfigurationControlManager {
 
     List<ApiMessageAndVersion> createClearElrRecordsAsNeeded(List<ApiMessageAndVersion> input) {
         if (!featureControl.isElrFeatureEnabled()) {
-            return Collections.emptyList();
+            return List.of();
         }
         List<ApiMessageAndVersion> output = new ArrayList<>();
         for (ApiMessageAndVersion messageAndVersion : input) {
@@ -309,7 +309,7 @@ public class ConfigurationControlManager {
                     setValue(newValue), (short) 0));
             }
         }
-        ApiError error = validateAlterConfig(configResource, newRecords, Collections.emptyList(), newlyCreatedResource);
+        ApiError error = validateAlterConfig(configResource, newRecords, List.of(), newlyCreatedResource);
         if (error.isFailure()) {
             return error;
         }
@@ -452,7 +452,7 @@ public class ConfigurationControlManager {
         List<ApiMessageAndVersion> recordsExplicitlyAltered = new ArrayList<>();
         Map<String, String> currentConfigs = configData.get(configResource);
         if (currentConfigs == null) {
-            currentConfigs = Collections.emptyMap();
+            currentConfigs = Map.of();
         }
         for (Entry<String, String> entry : newConfigs.entrySet()) {
             String key = entry.getKey();
@@ -544,7 +544,7 @@ public class ConfigurationControlManager {
     Map<String, String> getConfigs(ConfigResource configResource) {
         Map<String, String> map = configData.get(configResource);
         if (map == null) {
-            return Collections.emptyMap();
+            return Map.of();
         } else {
             return Map.copyOf(map);
         }
@@ -711,17 +711,17 @@ public class ConfigurationControlManager {
 
     Map<String, String> clusterConfig() {
         Map<String, String> result = configData.get(DEFAULT_NODE);
-        return (result == null) ? Collections.emptyMap() : result;
+        return (result == null) ? Map.of() : result;
     }
 
     Map<String, String> currentControllerConfig() {
         Map<String, String> result = configData.get(currentController);
-        return (result == null) ? Collections.emptyMap() : result;
+        return (result == null) ? Map.of() : result;
     }
 
     Map<String, String> currentTopicConfig(String topicName) {
         Map<String, String> result = configData.get(new ConfigResource(Type.TOPIC, topicName));
-        return (result == null) ? Collections.emptyMap() : result;
+        return (result == null) ? Map.of() : result;
     }
 
     // Visible to test
