@@ -68,7 +68,7 @@ public class ClientQuotaControlManagerTest {
         assertInvalidEntity(manager, entity(ClientQuotaEntity.CLIENT_ID, "user-1", ClientQuotaEntity.IP, "1.2.3.4"));
 
         // Empty
-        assertInvalidEntity(manager, new ClientQuotaEntity(Collections.emptyMap()));
+        assertInvalidEntity(manager, new ClientQuotaEntity(Map.of()));
     }
 
     private void assertInvalidEntity(ClientQuotaControlManager manager, ClientQuotaEntity entity) {
@@ -323,7 +323,7 @@ public class ClientQuotaControlManagerTest {
 
     @Test
     public void testConfigKeysForEntityTypeWithUser() {
-        testConfigKeysForEntityType(Collections.singletonList(ClientQuotaEntity.USER),
+        testConfigKeysForEntityType(List.of(ClientQuotaEntity.USER),
             Arrays.asList(
                 "producer_byte_rate",
                 "consumer_byte_rate",
@@ -334,7 +334,7 @@ public class ClientQuotaControlManagerTest {
 
     @Test
     public void testConfigKeysForEntityTypeWithClientId() {
-        testConfigKeysForEntityType(Collections.singletonList(ClientQuotaEntity.CLIENT_ID),
+        testConfigKeysForEntityType(List.of(ClientQuotaEntity.CLIENT_ID),
             Arrays.asList(
                 "producer_byte_rate",
                 "consumer_byte_rate",
@@ -356,8 +356,8 @@ public class ClientQuotaControlManagerTest {
 
     @Test
     public void testConfigKeysForEntityTypeWithIp() {
-        testConfigKeysForEntityType(Collections.singletonList(ClientQuotaEntity.IP),
-            Collections.singletonList(
+        testConfigKeysForEntityType(List.of(ClientQuotaEntity.IP),
+            List.of(
                 "connection_creation_rate"
             ));
     }
@@ -386,7 +386,7 @@ public class ClientQuotaControlManagerTest {
 
     @Test
     public void testConfigKeysForEmptyEntity() {
-        testConfigKeysError(Collections.emptyList(),
+        testConfigKeysError(List.of(),
             new ApiError(Errors.INVALID_REQUEST, "Invalid empty client quota entity"));
     }
 
@@ -410,7 +410,7 @@ public class ClientQuotaControlManagerTest {
 
     @Test
     public void testConfigKeysForUnresolvableIpEntity() {
-        testConfigKeysError(Collections.singletonMap(ClientQuotaEntity.IP, "example.invalid"),
+        testConfigKeysError(Map.of(ClientQuotaEntity.IP, "example.invalid"),
             new ApiError(Errors.INVALID_REQUEST, "example.invalid is not a valid IP or resolvable host."));
     }
 
@@ -427,7 +427,7 @@ public class ClientQuotaControlManagerTest {
     static {
         VALID_CLIENT_ID_QUOTA_KEYS = new HashMap<>();
         assertEquals(ApiError.NONE, ClientQuotaControlManager.configKeysForEntityType(
-                keysToEntity(Collections.singletonList(ClientQuotaEntity.CLIENT_ID)), VALID_CLIENT_ID_QUOTA_KEYS));
+                keysToEntity(List.of(ClientQuotaEntity.CLIENT_ID)), VALID_CLIENT_ID_QUOTA_KEYS));
     }
 
     @Test
