@@ -27,9 +27,9 @@ import com.yammer.metrics.core.MetricsRegistry;
 import org.junit.jupiter.api.Test;
 
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.Optional;
+import java.util.Set;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
@@ -58,7 +58,7 @@ public class QuorumControllerMetricsTest {
                 ControllerMetricsTestUtils.assertMetricsForTypeEqual(registry, "kafka.controller", expected);
             }
             ControllerMetricsTestUtils.assertMetricsForTypeEqual(registry, "kafka.controller",
-                    Collections.emptySet());
+                    Set.of());
         } finally {
             registry.shutdown();
         }
