@@ -32,7 +32,6 @@ import org.junit.jupiter.api.Timeout;
 
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -54,13 +53,13 @@ public class ClientQuotasImageTest {
 
     static {
         Map<ClientQuotaEntity, ClientQuotaImage> entities1 = new HashMap<>();
-        Map<String, String> fooUser = Collections.singletonMap(ClientQuotaEntity.USER, "foo");
-        Map<String, Double> fooUserQuotas = Collections.singletonMap(QuotaConfig.PRODUCER_BYTE_RATE_OVERRIDE_CONFIG, 123.0);
+        Map<String, String> fooUser = Map.of(ClientQuotaEntity.USER, "foo");
+        Map<String, Double> fooUserQuotas = Map.of(QuotaConfig.PRODUCER_BYTE_RATE_OVERRIDE_CONFIG, 123.0);
         entities1.put(new ClientQuotaEntity(fooUser), new ClientQuotaImage(fooUserQuotas));
         Map<String, String> barUserAndIp = new HashMap<>();
         barUserAndIp.put(ClientQuotaEntity.USER, "bar");
         barUserAndIp.put(ClientQuotaEntity.IP, "127.0.0.1");
-        Map<String, Double> barUserAndIpQuotas = Collections.singletonMap(QuotaConfig.CONSUMER_BYTE_RATE_OVERRIDE_CONFIG, 456.0);
+        Map<String, Double> barUserAndIpQuotas = Map.of(QuotaConfig.CONSUMER_BYTE_RATE_OVERRIDE_CONFIG, 456.0);
         entities1.put(new ClientQuotaEntity(barUserAndIp), new ClientQuotaImage(barUserAndIpQuotas));
         IMAGE1 = new ClientQuotasImage(entities1);
 
@@ -74,13 +73,13 @@ public class ClientQuotasImageTest {
                 setRemove(true), CLIENT_QUOTA_RECORD.highestSupportedVersion()));
         // alter quota
         DELTA1_RECORDS.add(new ApiMessageAndVersion(new ClientQuotaRecord().
-            setEntity(Collections.singletonList(
+            setEntity(List.of(
                 new EntityData().setEntityType(ClientQuotaEntity.USER).setEntityName("foo"))).
             setKey(QuotaConfig.PRODUCER_BYTE_RATE_OVERRIDE_CONFIG).
             setValue(234.0), CLIENT_QUOTA_RECORD.highestSupportedVersion()));
         // add quota to entity with existing quota
         DELTA1_RECORDS.add(new ApiMessageAndVersion(new ClientQuotaRecord().
-            setEntity(Collections.singletonList(
+            setEntity(List.of(
                 new EntityData().setEntityType(ClientQuotaEntity.USER).setEntityName("foo"))).
             setKey(QuotaConfig.CONSUMER_BYTE_RATE_OVERRIDE_CONFIG).
             setValue(999.0), CLIENT_QUOTA_RECORD.highestSupportedVersion()));
