@@ -27,9 +27,9 @@ import com.yammer.metrics.core.MetricsRegistry;
 import org.junit.jupiter.api.Test;
 
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.Optional;
+import java.util.Set;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.atomic.AtomicLong;
 import java.util.concurrent.atomic.AtomicReference;
@@ -77,7 +77,7 @@ public class MetadataLoaderMetricsTest {
                     )));
             }
             ControllerMetricsTestUtils.assertMetricsForTypeEqual(registry, "kafka.server",
-                    Collections.emptySet());
+                    Set.of());
         } finally {
             registry.shutdown();
         }
@@ -134,7 +134,7 @@ public class MetadataLoaderMetricsTest {
                 assertEquals(2L, loadSnapshotCount.value().longValue());
             }
             ControllerMetricsTestUtils.assertMetricsForTypeEqual(registry, "kafka.server",
-                Collections.emptySet());
+                Set.of());
         } finally {
             registry.shutdown();
         }
