@@ -30,9 +30,9 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.Optional;
+import java.util.Set;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
@@ -84,7 +84,7 @@ public class SnapshotEmitterMetricsTest {
                 )));
             ctx.metrics.close();
             ControllerMetricsTestUtils.assertMetricsForTypeEqual(ctx.registry, "KafkaController",
-                    Collections.emptySet());
+                    Set.of());
         }
     }
 
