@@ -42,7 +42,6 @@ import org.junit.jupiter.params.provider.MethodSource;
 
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.stream.Stream;
 
@@ -76,7 +75,7 @@ public class PartitionRegistrationTest {
             setReplicas(new int[]{1, 2, 3}).setDirectories(DirectoryId.unassignedArray(3)).
             setIsr(new int[]{1}).setLastKnownElr(new int[]{3}).setElr(new int[]{2}).setLeader(1).setLeaderRecoveryState(LeaderRecoveryState.RECOVERED).setLeaderEpoch(0).setPartitionEpoch(1).build();
         assertEquals(b, a.merge(new PartitionChangeRecord().
-            setLeader(3).setIsr(Collections.singletonList(3))));
+            setLeader(3).setIsr(List.of(3))));
         assertEquals("isr: [1, 2] -> [3], leader: 1 -> 3, leaderEpoch: 0 -> 1, partitionEpoch: 0 -> 1",
             b.diff(a));
         assertEquals("isr: [1, 2] -> [1], elr: [] -> [2], lastKnownElr: [] -> [3], partitionEpoch: 0 -> 1",
@@ -125,8 +124,8 @@ public class PartitionRegistrationTest {
                 setIsr(Arrays.asList(1, 2)).
                 setPartitionEpoch(456).
                 setReplicas(Arrays.asList(1, 2, 3)).
-                setAddingReplicas(Collections.emptyList()).
-                setRemovingReplicas(Collections.emptyList()).
+                setAddingReplicas(List.of()).
+                setRemovingReplicas(List.of()).
                 setIsNew(true).toString(),
             a.toLeaderAndIsrPartitionState(new TopicPartition("foo", 1), true).toString());
         assertEquals(new LeaderAndIsrRequest.PartitionState().
@@ -138,8 +137,8 @@ public class PartitionRegistrationTest {
                 setIsr(Arrays.asList(2, 3, 4)).
                 setPartitionEpoch(567).
                 setReplicas(Arrays.asList(2, 3, 4)).
-                setAddingReplicas(Collections.emptyList()).
-                setRemovingReplicas(Collections.emptyList()).
+                setAddingReplicas(List.of()).
+                setRemovingReplicas(List.of()).
                 setIsNew(false).toString(),
             b.toLeaderAndIsrPartitionState(new TopicPartition("bar", 0), false).toString());
     }
@@ -153,8 +152,8 @@ public class PartitionRegistrationTest {
             setDirectories(new Uuid[]{dir1, dir2, dir3}).
             setIsr(new int[] {1, 2, 3}).setLeader(1).setLeaderRecoveryState(LeaderRecoveryState.RECOVERED).setLeaderEpoch(100).setPartitionEpoch(200).build();
         PartitionRegistration partition1 = partition0.merge(new PartitionChangeRecord().
-            setRemovingReplicas(Collections.singletonList(3)).
-            setAddingReplicas(Collections.singletonList(4)).
+            setRemovingReplicas(List.of(3)).
+            setAddingReplicas(List.of(4)).
             setReplicas(Arrays.asList(1, 2, 3, 4)).
             setDirectories(Arrays.asList(dir1, dir2, dir3, DirectoryId.UNASSIGNED)));
         assertEquals(new PartitionRegistration.Builder().setReplicas(new int[] {1, 2, 3, 4}).
@@ -162,8 +161,8 @@ public class PartitionRegistrationTest {
             setIsr(new int[] {1, 2, 3}).setRemovingReplicas(new int[] {3}).setAddingReplicas(new int[] {4}).setLeader(1).setLeaderRecoveryState(LeaderRecoveryState.RECOVERED).setLeaderEpoch(100).setPartitionEpoch(201).build(), partition1);
         PartitionRegistration partition2 = partition1.merge(new PartitionChangeRecord().
             setIsr(Arrays.asList(1, 2, 4)).
-            setRemovingReplicas(Collections.emptyList()).
-            setAddingReplicas(Collections.emptyList()).
+            setRemovingReplicas(List.of()).
+            setAddingReplicas(List.of()).
             setReplicas(Arrays.asList(1, 2, 4)).
             setDirectories(Arrays.asList(dir1, dir2, DirectoryId.UNASSIGNED)));
         assertEquals(new PartitionRegistration.Builder().setReplicas(new int[] {1, 2, 4}).
@@ -324,7 +323,7 @@ public class PartitionRegistrationTest {
         if (metadataVersion.isElrSupported()) {
             expectRecord.
                 setEligibleLeaderReplicas(Arrays.asList(2, 3)).
-                setLastKnownElr(Collections.singletonList(4));
+                setLastKnownElr(List.of(4));
         }
         if (metadataVersion.isDirectoryAssignmentSupported()) {
             expectRecord.setDirectories(Arrays.asList(
